--- a/src/app/reservation-form/reservation-form.component.css
+++ b/src/app/reservation-form/reservation-form.component.css
@@ -28,3 +28,32 @@
     top: 0;
     right: 11px;
 }
+.maindatepick {
+  position: relative;
+}
+.date_pick {
+  border: 2px solid #d7d7d7;
+    color: #000;
+    font: 0.75em arial;
+        padding: 10px;
+    font-family: "Raleway", "Adobe Blank", sans-serif;
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    width: 100%;
+}
+.maindatepick:after{
+  content: '>';
+    font-weight: 700;
+    font-size: 14px;
+    -ms-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    margin-top: -8px;
+    color: #000;
+}
