--- a/src/app/cart-time/cart-time.component.html
+++ b/src/app/cart-time/cart-time.component.html
@@ -1,5 +1,5 @@
  <div class="box_expectedtime _fs14">
-  <p class="_fontarial">Expected Time of <span class="text-capitalize">{{order_type}}</span>:</p>
+  <p class="title_bs_order">Expected Time of <span class="text-capitalize">{{order_type}}</span>:</p>
         <div [hidden]="!timeEdit">
         <p class="txt_upper">{{dateText(date)}}, {{hourTime(time)}}</p>
         <p class="txt_minhours">Hours: <span class="t-operation-hours">{{cartTimeEdit}}</span></p>
